--- a/company/css/main.css
+++ b/company/css/main.css
@@ -368,12 +368,14 @@ body{
 .wrap-right h1{
 	text-align: center;
 	margin-bottom: 10px;
+	font-size: 18px;
 }
 .wrap-right>p{
 	text-align: center;
-	color: #444;
+	color: #666;
 	border-bottom: 1px dotted #ccc;
 	margin-bottom: 20px;
+	font-size: 12px;
 }
 .news-content{
 	padding: 10px 20px;
@@ -384,6 +386,8 @@ body{
 .news-content p{
 	text-indent: 2em;
 	line-height: 20px;
+	font-size: 12px;
+	color: #333;
 }
 .news-content p em{
 	text-decoration: underline;
@@ -391,5 +395,5 @@ body{
 }
 .news-content p span{
 	font-weight: bold;
-	color: #000;
+	color: #222;
 }
