--- a/weily/css/web.css
+++ b/weily/css/web.css
@@ -1,7 +1,6 @@
 body{
 	margin: 0;
 	padding: 0;
-	/*min-width: 1100px;*/
 }
 .bg{
 	width: 100%;
@@ -19,7 +18,6 @@ body{
 .main{
 	width: 1100px;
 	position: absolute;
-	/*height: 2000px;*/
 	background: #efefef;
 	top: 300px;
 	left: 50%;
@@ -105,10 +103,21 @@ body{
 
 /*footer===============*/
 .footer{
-	height: 70px;
+	height: 100px;
 	background: #666;
 	position: absolute;
-	bottom: -70px;
+	width: 100%;
+	top: 2262px;
+}
+.footer p{
+	line-height: 100px;
+	font-size: 16px;
+	color: #f2f2f2;
+	text-align: center;
+}
+.footer p>a{
+	color: #ccc;
+	font-size: 14px;
 }
 @media (max-width: 1100px) {
 	.bg{
@@ -121,6 +130,7 @@ body{
 		top: -200px;
 	}
 	.footer{
-		width: 1100px;
+		width: 1040px;
+		top: 2412px;
 	}
 }
