--- a/weily/css/web.css
+++ b/weily/css/web.css
@@ -33,10 +33,17 @@ body{
 	text-align: center;
 	width: 100%;
 }
+
+/*topbanner================*/
 .topbanner{
 	width: 1100px;
 	height: 330px;
 	overflow: hidden;
+}
+#boxID{
+	background: url(../picture/Webs/topbanner.jpg);
+	width: 100%;
+	height: 330px;
 }
 .briefing h2{
 	color: #069;
