--- a/weily/css/style.css
+++ b/weily/css/style.css
@@ -663,7 +663,7 @@ ul.reset li a {
     width: 100%;
     z-index: 100;
     font-family: "微软雅黑";
-    /*padding-top: 10px;*/
+    top: 0;
 }
 .nav .nav-logo{
     float: left;
@@ -674,13 +674,35 @@ ul.reset li a {
 }
 .nav ul{
     height: 70px;
-    margin-right: 50px;
+    width: 332px;
+    float: right;
+    padding-right: 50px;
 }
 .nav ul li a{
     display: block;
     color: #fff;
     float: right;
     line-height: 30px;
-    margin: 20px 15px;
+    margin: 20px 0;
+    padding: 0 15px;
     font-family: "微软雅黑";
+}
+
+/*footer===============*/
+.footer{
+    height: 100px;
+    background: #666;
+    position: absolute;
+    width: 100%;
+    top: 2919px;
+}
+.footer p{
+    line-height: 100px;
+    font-size: 16px;
+    color: #f2f2f2;
+    text-align: center;
+}
+.footer p>a{
+    color: #ccc;
+    font-size: 14px;
 }
