--- a/weily/css/home.css
+++ b/weily/css/home.css
@@ -1,5 +1,5 @@
 body,ul,ol,li,p,h1,h2,h3,h4,h5,h6,form,fieldset,table,td,img,div,dl,dt,dd,input{margin:0;padding:0;font-family: "微软雅黑";}
-body{font-size:12px;}
+body{font-size:12px;min-width: 1024px;}
 img{border:none;}
 li{list-style:none;}
 input,select,textarea{outline:none;}
@@ -158,7 +158,7 @@ a{text-decoration:none;}
     height: 70px;
     width: 422px;
     float: right;
-    padding-right: 50px;
+    padding-right: 30px;
     position: relative;
 }
 .nav-menu{
@@ -366,14 +366,10 @@ hr:hover{
 	text-indent: 140px;
 	background: url(../picture/icon.png) no-repeat 0px -317px;	
 }
-
-
-
 .banner3 .item>a:hover{
 	text-decoration: underline;
 	color: #c93949;
 }
-
 
 
 /*banner4====================================================*/
@@ -412,9 +408,160 @@ hr:hover{
 }
 
 
-
+/*banner5=================项目展示==============================*/
 .banner5{
-	height: 150px;
 	background: #fff;
-	padding-top: 50px;
+	padding: 50px 0;
+}
+.banner5 h2:hover~hr{
+	width: 280px;
+}
+.banner5 hr:hover{
+	width: 280px;
+}
+.item5{
+	width: 800px;
+	height: 200px;
+	background: #f2f2f2;
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
+.program-img{
+	width: 250px;
+	height: 100%;
+}
+.program-img.proL-img{
+	background: url(../picture/an2.jpg);
+	float: left;
+}
+.program-img.proR-img{
+	background: url(../picture/an3.jpg);
+	float: right;
+}
+.program-con{
+	width: 490px;
+	padding: 15px 30px;
+	height: 170px;
+	position: relative;
+}
+.program-con.proL-con{
+	float: left;
+}
+.program-con.proR-con{
+	float: right;
+}
+.program-con h3{
+	color: #555;
+	font-size: 18px;
+	margin-bottom: 20px;
+}
+.program-con p{
+	color: #999;
+	font-size: 14px;
+	margin-bottom: 20px;
+	text-indent: 2em;
+}
+.program-btn{
+	position: absolute;
+	color: #999;
+	border-radius: 3px;
+	padding: 5px 10px;
+	border: 1px solid #ccc;
+	right: 20px;
+	bottom: 10px;
+	cursor: pointer;
+	background: none;
+	transition: all .3s;
+	-webkit-transition: all .3s;
+	-ms-transition: all .3s;
+	-o-transition: all .3s;
+	-moz-transition: all .3s;
+}
+.program-btn:hover{
+	background: #ccc;
+	color: #666;
+}
+
+/*banner6======荣誉、成果展示======================================*/
+.banner6{
+	padding: 50px 0;
+	background: #f2f2f2;
+}
+.banner6 h2:hover~hr{
+	width: 280px;
+}
+.banner6 hr:hover{
+	width: 280px;
+}
+.honour-box{
+	width: 1000px;
+	overflow: hidden;
+	margin: 0 auto;
+}
+.honour-box h3{
+	line-height: 50px;
+	font-size: 18px;
+	color: #444;
+	font-family: "宋体"
+}
+.item6{
+	width: 220px;
+	min-height: 200px;
+	padding: 0 15px;
+	float: left;
+	margin-bottom: 30px;
+}
+.item6.honour{
+	margin-left: -1px;
+	border-right: 1px solid #ccc;
+	padding-bottom: 20px;
+}
+.item6.honour a{
+	display: block;
+	white-space: nowrap;
+	overflow: hidden;
+	line-height: 25px;
+	color: #333;
+	text-indent: 30px;
+	padding-top: 2px;
+	margin-top: 3px;
+	transition: all .3s;
+	background: url(../picture/icon.png) no-repeat 0px -363px;
+}
+.item6.honour a:hover{
+	background-color: #fff;
+	box-shadow: 0 0 10px #444;
+	transform: translateY(-2px);
+}
+.item6.honour .more{
+	text-align: right;
+	background: none;
+	color: #999;
+	line-height: 40px;
+	cursor: pointer;
+	transition: all .3s;
+}
+.item6.honour .more>span{
+	display: block;
+	float: right;
+	margin-left: 3px;
+	-webkit-transform:rotate(90deg)
+}
+.item6.honour .more:hover{
+	color: #333;
+}
+.products{
+	float: left;
+	width: 750px;
+}
+.product-con{
+	padding: 0 5px;
+	line-height: 22px;
+	color: #666;
+}
+
+
+.footer{
+	height: 300px;
+	background: #0e2335;
 }
