--- a/weily/css/home.css
+++ b/weily/css/home.css
@@ -13,6 +13,7 @@ a{text-decoration:none;}
 .bg-banner{
 	width: 100%;
 	height: 700px;
+	background-color: #0e2335;
 	background: url(../picture/demo-1-bg.jpg);
 	position: relative;
     background-size: cover;
