--- a/weily/css/home.css
+++ b/weily/css/home.css
@@ -509,6 +509,12 @@ hr:hover{
 	color: #444;
 	font-family: "宋体"
 }
+
+.hon-box{
+	height: 120px;
+	overflow: hidden;
+}
+
 .item6{
 	width: 220px;
 	min-height: 200px;
@@ -527,6 +533,7 @@ hr:hover{
 	overflow: hidden;
 	line-height: 25px;
 	color: #333;
+	width: 214px;
 	text-indent: 30px;
 	padding-top: 2px;
 	margin-top: 3px;
@@ -545,6 +552,7 @@ hr:hover{
 	line-height: 40px;
 	cursor: pointer;
 	transition: all .3s;
+	width: 216px;
 }
 .item6.honour .more>span{
 	display: block;
@@ -556,13 +564,25 @@ hr:hover{
 	color: #333;
 }
 .products{
-	float: left;
+	float: right;
 	width: 750px;
+	margin-right: -15px;
+}
+.products h3{
+	text-indent: 15px;
+}
+.products .item6{
+	height: 240px;
+	overflow: hidden;
+	background: #fff;
+	padding: 0;
+	margin: 0 15px 30px 15px;
 }
 .product-con{
-	padding: 0 5px;
+	padding: 5px 10px;
 	line-height: 22px;
 	color: #666;
+	margin-top: -3px;
 }
 
 
