--- a/weily/css/style.css
+++ b/weily/css/style.css
@@ -272,7 +272,7 @@ a {
     margin-left: -30px;
     width: 40px;
     height: 21px;
-    background: url(../picture/down.png) no-repeat center center;
+    background: url(../picture/join-img/down.png) no-repeat center center;
     background-size: cover;
     cursor: pointer;
     z-index: 99;
