--- a/weily/css/home.css
+++ b/weily/css/home.css
@@ -141,6 +141,7 @@ a{text-decoration:none;}
     z-index: 100;
     font-family: "微软雅黑";
     top: 0;
+    min-width: 1024px;
 }
 .nav-hover{
     background-color: rgba(0,0,0,.5);	
@@ -533,6 +534,7 @@ hr:hover{
 	overflow: hidden;
 }
 
+
 .item6{
 	width: 220px;
 	min-height: 200px;
@@ -595,6 +597,10 @@ hr:hover{
 	background: #fff;
 	padding: 0;
 	margin: 0 15px 30px 15px;
+	transition: all .3s;
+}
+.products .item6:hover{
+	box-shadow: 0 0 20px #999;
 }
 .product-con{
 	padding: 5px 10px;
@@ -635,7 +641,7 @@ hr:hover{
 }
 /*footer=======================================*/
 .footer{
-	height: 300px;
+	height: 200px;
 	background: #0e2335;
 }
 .share{
@@ -657,4 +663,30 @@ hr:hover{
 }
 .share a.fenxiang{
 	background: url(../picture/icon.png) no-repeat 0px -615px;
+}
+
+.footer ul{
+	text-align: center;
+	margin-top: 10px;
+}
+.footer ul li{
+	text-align: center;
+	display: inline-block;
+}
+.footer ul li a{
+	color: #aaa;
+	display: inline-block;
+	margin: 0 5px;
+}
+.footer ul li a>span{
+	display: inline-block;
+	padding-left: 10px;
+	color: #888;
+}
+.footer ul.address li a>span{
+	padding-left: 5px;
+}
+.footer ul.about-us li a:hover{
+	color: #ddd;
+	text-decoration: underline;
 }
